# npmotornet

./: .gitignore  pyproject.toml
examples/: 01_basic_pointmass_relu.py  02_hill_muscle_demo.py  03_two_dof_arm.py  04_compliant_tendon_muscle.py  05_golgi_tendon_organ.py  06_isometric_force_stability.py  07_calibrated_gto_parameters.py  08_muscle_spindle.py  09_proprioceptive_feedback.py  10_replicate_reference_figures.py  11_antagonistic_muscles_proprioception.py  12_one_dof_arm.py  README.md  adaptive_timestep_demo.py  performance_demo.py
npmotornet/: NOTICE  README.md  __init__.py  effector.py  muscle.py  numba_classes.py  numba_optimized.py  pyproject.toml  sensory.py  sensory_configs.py  skeleton.py  utils.py
tests/: test_integration.py
